--- a/SWBF2_Tool/SWBF2_Tool.csproj
+++ b/SWBF2_Tool/SWBF2_Tool.csproj
@@ -57,6 +57,12 @@
     <Compile Include="ImageViewer.Designer.cs">
       <DependentUpon>ImageViewer.cs</DependentUpon>
     </Compile>
+    <Compile Include="LVLSearchForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LVLSearchForm.Designer.cs">
+      <DependentUpon>LVLSearchForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -119,6 +125,10 @@
     <Content Include="Blue_Lightsaber_icon.ico" />
     <Content Include="Goals.txt" />
     <EmbeddedResource Include="Help.png" />
+    <EmbeddedResource Include="LVLSearchForm.resx">
+      <DependentUpon>LVLSearchForm.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
