--- a/SWBF2CodeHelper/SWBF2CodeHelper.csproj
+++ b/SWBF2CodeHelper/SWBF2CodeHelper.csproj
@@ -52,7 +52,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Expressions.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -75,6 +74,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="StringInputDlg.resx">
       <DependentUpon>StringInputDlg.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
